# streamlit_pygwalker_app

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
