[tool.poetry]
name = "streamlit-pygwalker-app"
version = "0.1.0"
description = "Running PyGWalker on Stramlit"
authors = ["k-nai"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.30.0"
pygwalker = "^0.1.7"
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
